RESOLVED FIXED 59032
[Mac]Regression: extending word that is already marked misspelled doesn't remove misspelling underline.
https://bugs.webkit.org/show_bug.cgi?id=59032
Summary [Mac]Regression: extending word that is already marked misspelled doesn't rem...
Jia Pu
Reported 2011-04-20 16:18:15 PDT
If the word "brough" is already marked as misspelled, appending "t" at the end doesn't remove the misspelling marker. This is a regression introduced in changeset 83344. In Editor.cpp, "removeSpellAndCorrectionMarkersFromWordsToBeEdited(isSpaceOrNewline(text[0])); " is replaced "updateMarkersForWordsAffectedByEditing(text[0]);", and the the call to isSpaceOrNewline() is missing.
Attachments
Patch (v1) (3.47 KB, patch)
2011-04-20 17:16 PDT, Jia Pu
no flags
Jia Pu
Comment 1 2011-04-20 17:03:16 PDT
Jia Pu
Comment 2 2011-04-20 17:16:48 PDT
Created attachment 90452 [details] Patch (v1)
Maciej Stachowiak
Comment 3 2011-04-20 17:32:59 PDT
Comment on attachment 90452 [details] Patch (v1) r=me
WebKit Commit Bot
Comment 4 2011-04-20 18:26:29 PDT
The commit-queue encountered the following flaky tests while processing attachment 90452 [details]: animations/suspend-resume-animation.html bug 48161 (author: cmarrin@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5 2011-04-20 18:28:46 PDT
Comment on attachment 90452 [details] Patch (v1) Clearing flags on attachment: 90452 Committed r84448: <http://trac.webkit.org/changeset/84448>
WebKit Commit Bot
Comment 6 2011-04-20 18:28:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.